Fixes map bottom position on mobile

--- a/client/stylesheets/maps.import.styl
+++ b/client/stylesheets/maps.import.styl
@@ -56,8 +56,6 @@ arrow-height = (arrow-width / 2)
   background rgba(255,255,255,.8)
 
 @media (max-width: 768px)
-  .vis-container
-    bottom footer-height-mobile
   .leaflet-container .leaflet-control-attribution, 
   .leaflet-container .leaflet-control-scale
     max-width 70%
